--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@karmalicious/nodejs-drivers",
-  "version": "4.3.2",
+  "version": "5.0.0",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
   "repository": "git@github.com:karmadev/nodejs-drivers.git",
@@ -17,6 +17,7 @@
     "@types/jsonwebtoken": "^7.2.8",
     "@types/jsreport-core": "^1.5.0",
     "@types/sequelize": "^4.27.21",
+    "@types/uuid": "^3.4.3",
     "@types/winston": "^2.3.9",
     "amqplib": "^0.5.2",
     "axios": "^0.18.0",
