change ssl to use base64

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,13 @@
 NODE_ENV=development
-GOOGLE_APPLICATION_CREDENTIALS=REPLACE_ME
-KRESE_LOG_LEVEL=info
-KRESE_SERVER_PORT=9897
-KRESE_SERVER_PUBLIC_BASE_URL=http://localhost:9897
-KRESE_DB_HOST=__NONE__
-KRESE_DB_USR=__NONE__
-KRESE_DB_DB=__NONE__
-KRESE_DB_PSW=__NONE__
-KRESE_GCP_PROJECT_ID=__NONE__
+GOOGLE_APPLICATION_CREDENTIALS=<REPLACE>
+APP_LOG_LEVEL="<Example: info>"
+APP_SERVER_PORT="<Example: 9897>"
+APP_SERVER_PUBLIC_BASE_URL="<Example: http://localhost:9897>"
+APP_DB_HOST=<REPLACE>
+APP_DB_USR=<REPLACE>
+APP_DB_DB=<REPLACE>
+APP_DB_PSW=<REPLACE>
+APP_GCP_PROJECT_ID=<REPLACE>
+APP_SERVER_CA="<Convert your cert file content to BASE64 and paste here.>"
+APP_CLIENT_CERT="<Convert your cert file content to BASE64 and paste here.>"
+APP_CLIENT_KEY="<Convert your cert file content to BASE64 and paste here.>"
