--- a/package.json
+++ b/package.json
@@ -10,28 +10,19 @@
   "dependencies": {
     "@google-cloud/pubsub": "^0.19.0",
     "@types/body-parser": "^1.17.0",
-    "@types/dotenv": "^4.0.3",
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.1",
     "@types/jsonwebtoken": "^7.2.8",
-    "@types/jsreport-core": "^1.5.0",
     "@types/sequelize": "^4.27.24",
     "@types/uuid": "^3.4.3",
-    "@types/winston": "^2.3.9",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
-    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
-    "jsreport": "^2.1.1",
-    "jsreport-core": "^2.1.0",
-    "jsreport-jsrender": "^2.0.0",
-    "jsreport-phantom-pdf": "^2.1.3",
     "pg": "^7.4.3",
     "rxjs": "^6.2.2",
     "sequelize": "^4.38.0",
-    "uuid": "^3.3.2",
-    "winston": "^3.0.0"
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "concurrently": "^3.6.1",
