--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "concurrently": "^3.6.1",
     "husky": "^0.14.3",
     "jest": "^23.4.2",
+    "lerna": "^3.3.0",
     "lint-staged": "^7.2.0",
     "nodemon": "^1.18.3",
     "prettier": "^1.14.2",
