--- a/package.json
+++ b/package.json
@@ -1,30 +1,12 @@
 {
-  "name": "@karmalicious/nodejs-drivers",
-  "version": "9.0.0",
-  "main": "./build/index.js",
-  "types": "./build/index.d.ts",
   "repository": "git@github.com:karmadev/nodejs-drivers.git",
   "author": "Marcus Nielsen <marcus@karma.life>",
   "license": "MIT",
-  "private": false,
+  "private": true,
   "dependencies": {
-    "@google-cloud/pubsub": "^0.19.0",
-    "@types/body-parser": "^1.17.0",
-    "@types/express": "^4.16.0",
-    "@types/jest": "^23.3.1",
-    "@types/jsonwebtoken": "^7.2.8",
-    "@types/sequelize": "^4.27.24",
-    "@types/uuid": "^3.4.3",
-    "axios": "^0.18.0",
-    "body-parser": "^1.18.3",
-    "express": "^4.16.3",
-    "jsonwebtoken": "^8.3.0",
-    "pg": "^7.4.3",
-    "rxjs": "^6.2.2",
-    "sequelize": "^4.38.0",
-    "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "@types/jest": "^23.3.1",
     "concurrently": "^3.6.1",
     "husky": "^0.14.3",
     "jest": "^23.4.2",
@@ -38,19 +20,10 @@
     "typescript": "^3.0.1"
   },
   "scripts": {
-    "start": "npm run build && npm run watch",
-    "build": "npm run build-ts && npm run tslint",
-    "serve": "nodemon build/index.js",
-    "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve\"",
-    "test": "NODE_ENV=test jest",
-    "build-ts": "tsc",
-    "watch-ts": "tsc -w",
-    "tslint": "tslint -c tslint.json -p tsconfig.json",
-    "debug": "npm run build && npm run watch-debug",
-    "serve-debug": "nodemon --inspect build/index.js",
-    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\"",
-    "precommit": "lint-staged",
-    "prepare": "npm run build"
+    "clean": "lerna run clean",
+    "lint": "lerna run lint",
+    "build": "lerna run build",
+    "test": "lerna run test"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
