--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,8 @@
 {
+  "npmClient": "yarn",
+  "useWorkspaces": true,
   "packages": [
-    "packages/config"
+    "packages/drivers-config"
   ],
   "version": "10.0.0"
 }
