--- a/package.json
+++ b/package.json
@@ -3,27 +3,22 @@
   "author": "Marcus Nielsen <marcus@karma.life>",
   "license": "MIT",
   "private": true,
-  "dependencies": {
-  },
   "devDependencies": {
-    "@types/jest": "^23.3.1",
-    "concurrently": "^3.6.1",
-    "husky": "^0.14.3",
-    "jest": "^23.4.2",
+    "@types/jest": "^23.3.5",
+    "jest": "^23.6.0",
     "lerna": "^3.3.0",
-    "lint-staged": "^7.2.0",
-    "nodemon": "^1.18.3",
-    "prettier": "^1.14.2",
-    "ts-jest": "^23.1.3",
+    "prettier": "^1.14.3",
     "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.14.0",
-    "typescript": "^3.0.1"
+    "tslint-config-prettier": "^1.15.0",
+    "typescript": "^3.1.3"
   },
   "scripts": {
     "clean": "lerna run clean",
     "lint": "lerna run lint",
     "build": "lerna run build",
-    "test": "lerna run test"
+    "test": "lerna run test",
+    "check-packages": "yarn clean && yarn build && yarn test && yarn lint",
+    "publish-packages": "./scripts/publish"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
