--- a/packages/drivers-config/tsconfig.json
+++ b/packages/drivers-config/tsconfig.json
@@ -1,15 +1,26 @@
 {
   "compilerOptions": {
-    "target":
-      "es2017" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', or 'ESNEXT'. */,
-    "module":
-      "commonjs" /* Specify module code generation: 'none', commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
-    "lib": ["es2017"],                             /* Specify library files to be included in the compilation:  */
-    "outDir": "./build" /* Redirect output structure to the directory. */,
-    "strict": true /* Enable all strict type-checking options. */,
-    "noImplicitAny": false /* Raise error on expressions and declarations with an implied 'any' type. */,
-    "declaration": true
+    "module": "commonjs",
+    "target": "es2017",
+    "lib": [
+      "es2017",
+      "esnext",
+    ],
+    "removeComments": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "sourceMap": true,
+    "declaration": true,
+    "pretty": false,
+    "outDir": "lib"
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "**/*.test.ts"]
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "**/*.test.ts",
+    "**/*.integration.ts"
+  ]
 }
