--- a/packages/drivers-config/package.json
+++ b/packages/drivers-config/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "drivers-config",
+  "name": "@karmalicious/drivers-config",
   "version": "10.0.0",
   "scripts": {
     "build": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "prepare": ""
   },
   "devDependencies": {
     "@types/jest": "^23.3.5",
