--- a/packages/drivers-pub-sub/package.json
+++ b/packages/drivers-pub-sub/package.json
@@ -1,6 +1,19 @@
 {
+  "name": "@karmalicious/drivers-pub-sub",
+  "version": "10.0.0",
+  "scripts": {
+    "build": "tsc",
+    "test": "jest",
+    "prepare": "npm run build"
+  },
+  "devDependencies": {
+    "@types/jest": "^23.3.5",
+    "jest": "^23.6.0",
+    "ts-jest": "^23.10.4",
+    "typescript": "^3.1.3"
+  },
   "dependencies": {
-    "@google-cloud/pubsub": "^0.19.0",
+    "@google-cloud/pubsub": "^0.20.1",
     "rxjs": "^6.2.2"
   }
 }
