add prepare script

--- a/packages/drivers-config/package.json
+++ b/packages/drivers-config/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build": "tsc",
     "test": "jest",
-    "prepare": ""
+    "prepare": "npm run build"
   },
   "devDependencies": {
     "@types/jest": "^23.3.5",
