--- a/packages/drivers-config/package.json
+++ b/packages/drivers-config/package.json
@@ -1,6 +1,8 @@
 {
   "name": "@karmalicious/drivers-config",
   "version": "10.0.0",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
     "build": "tsc",
     "test": "jest",
