--- a/packages/drivers-db/package.json
+++ b/packages/drivers-db/package.json
@@ -1,7 +1,18 @@
 {
+  "name": "@karmalicious/drviers-db",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "dependencies": {
+    "@types/node": "^10.11.7",
     "@types/sequelize": "^4.27.24",
+    "pg": "^7.4.3",
     "sequelize": "^4.38.0",
-    "pg": "^7.4.3"
+    "@karmalicious/drivers-config": "^10.0.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^23.3.5",
+    "jest": "^23.6.0",
+    "ts-jest": "^23.10.4",
+    "typescript": "^3.1.3"
   }
 }
