--- a/packages/drivers-pub-sub/package.json
+++ b/packages/drivers-pub-sub/package.json
@@ -1,5 +1,7 @@
 {
   "name": "@karmalicious/drivers-pub-sub",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "version": "10.0.0",
   "scripts": {
     "build": "tsc",
