--- a/packages/drivers-db/package.json
+++ b/packages/drivers-db/package.json
@@ -2,6 +2,11 @@
   "name": "@karmalicious/drviers-db",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
+  "scripts": {
+    "build": "tsc",
+    "test": "jest",
+    "prepare": "npm run build"
+  },
   "dependencies": {
     "@types/node": "^10.11.7",
     "@types/sequelize": "^4.27.24",
