--- a/packages/drivers-http-request/package.json
+++ b/packages/drivers-http-request/package.json
@@ -1,5 +1,19 @@
 {
+  "name": "@karmalicious/drviers-db",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "scripts": {
+    "build": "tsc",
+    "test": "jest",
+    "prepare": "npm run build"
+  },
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.18.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^23.3.5",
+    "jest": "^23.6.0",
+    "ts-jest": "^23.10.4",
+    "typescript": "^3.1.3"
   }
 }
