--- a/lerna.json
+++ b/lerna.json
@@ -4,7 +4,8 @@
     "packages/drivers-db",
     "packages/drivers-pub-sub",
     "packages/drivers-http-request",
-    "packages/drivers-http-server"
+    "packages/drivers-http-server",
+    "packages/drivers-http-jwt"
   ],
   "version": "10.0.0"
 }
