--- a/lerna.json
+++ b/lerna.json
@@ -1,11 +1,6 @@
 {
   "packages": [
-    "packages/drivers-config",
-    "packages/drivers-db",
-    "packages/drivers-pub-sub",
-    "packages/drivers-http-request",
-    "packages/drivers-http-server",
-    "packages/drivers-http-jwt"
+    "packages/*"
   ],
   "version": "10.0.0"
 }
