--- a/packages/drivers-uuid/package.json
+++ b/packages/drivers-uuid/package.json
@@ -1,6 +1,21 @@
 {
+  "name": "@karmalicious/drivers-uuid",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "scripts": {
+    "build": "tsc",
+    "test": "jest",
+    "prepare": "npm run build"
+  },
   "dependencies": {
     "@types/uuid": "^3.4.3",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "@karmalicious/drivers-config": "10.0.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^23.3.5",
+    "jest": "^23.6.0",
+    "ts-jest": "^23.10.4",
+    "typescript": "^3.1.3"
   }
 }
