--- a/packages/drivers-db/package.json
+++ b/packages/drivers-db/package.json
@@ -8,16 +8,17 @@
     "prepare": "npm run build"
   },
   "dependencies": {
+    "@karmalicious/drivers-config": "^11.0.0",
     "@types/node": "^10.11.7",
     "@types/sequelize": "^4.27.24",
     "pg": "^7.4.3",
-    "sequelize": "^4.38.0",
-    "@karmalicious/drivers-config": "^10.0.0"
+    "sequelize": "^4.38.0"
   },
   "devDependencies": {
     "@types/jest": "^23.3.5",
     "jest": "^23.6.0",
     "ts-jest": "^23.10.4",
     "typescript": "^3.1.3"
-  }
+  },
+  "version": "11.0.0"
 }
