--- a/packages/drivers-http-server/package.json
+++ b/packages/drivers-http-server/package.json
@@ -8,16 +8,17 @@
     "prepare": "npm run build"
   },
   "dependencies": {
+    "@karmalicious/drivers-config": "^11.0.0",
     "@types/body-parser": "^1.17.0",
     "@types/express": "^4.16.0",
     "body-parser": "^1.18.3",
-    "express": "^4.16.4",
-    "@karmalicious/drivers-config": "10.0.0"
+    "express": "^4.16.4"
   },
   "devDependencies": {
     "@types/jest": "^23.3.5",
     "jest": "^23.6.0",
     "ts-jest": "^23.10.4",
     "typescript": "^3.1.3"
-  }
+  },
+  "version": "11.0.0"
 }
