--- a/packages/drivers-config/package.json
+++ b/packages/drivers-config/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@karmalicious/drivers-config",
+  "license": "MIT",
   "version": "11.0.0",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -13,5 +14,6 @@
     "jest": "^23.6.0",
     "ts-jest": "^23.10.4",
     "typescript": "^3.1.3"
-  }
+  },
+  "gitHead": "b56301be32b3bd1355ab57299c0c7a69aa283dda"
 }
