--- a/packages/drivers-db/package.json
+++ b/packages/drivers-db/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@karmalicious/drivers-db",
+  "license": "MIT",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
@@ -20,5 +21,6 @@
     "ts-jest": "^23.10.4",
     "typescript": "^3.1.3"
   },
-  "version": "11.0.0"
+  "version": "11.0.0",
+  "gitHead": "b56301be32b3bd1355ab57299c0c7a69aa283dda"
 }
