--- a/packages/drivers-pub-sub/package.json
+++ b/packages/drivers-pub-sub/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@karmalicious/drivers-pub-sub",
+  "license": "MIT",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "version": "11.0.0",
@@ -17,5 +18,6 @@
   "dependencies": {
     "@google-cloud/pubsub": "^0.20.1",
     "rxjs": "^6.2.2"
-  }
+  },
+  "gitHead": "b56301be32b3bd1355ab57299c0c7a69aa283dda"
 }
