fix public publish of packages

--- a/packages/drivers-config/package.json
+++ b/packages/drivers-config/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@karmalicious/drivers-config",
+  "private": false,
   "license": "MIT",
   "version": "11.1.0",
   "main": "lib/index.js",
