--- a/packages/drivers-uuid/package.json
+++ b/packages/drivers-uuid/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@karmalicious/drivers-uuid",
   "license": "MIT",
+  "private": false,
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
