--- a/packages/drivers-config/package.json
+++ b/packages/drivers-config/package.json
@@ -16,5 +16,8 @@
     "ts-jest": "^23.10.4",
     "typescript": "^3.1.3"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "gitHead": "b56301be32b3bd1355ab57299c0c7a69aa283dda"
 }
