--- a/packages/drivers-jwt/package.json
+++ b/packages/drivers-jwt/package.json
@@ -21,5 +21,8 @@
     "typescript": "^3.1.3"
   },
   "version": "11.1.1",
+  "publishConfig": {
+    "access": "public"
+  },
   "gitHead": "b56301be32b3bd1355ab57299c0c7a69aa283dda"
 }
