--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "clean": "lerna run clean",
     "lint": "lerna run lint",
     "build": "lerna run build",
-    "test": "lerna run test"
+    "test": "lerna run test",
+    "bootstrap": "lerna bootstrap",
+    "publish": "lerna publish"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
