--- a/packages/drivers-pub-sub/package.json
+++ b/packages/drivers-pub-sub/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@karmalicious/drivers-pub-sub",
   "license": "MIT",
-  "private": false,
+  "private": true,
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
-  "version": "13.7.0",
+  "version": "14.0.0",
   "scripts": {
     "build": "tsc",
     "test": "PUBSUB_PROJECT_ID=my-project-id jest",
@@ -13,15 +13,15 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.6",
-    "@types/node": "^11.9.4",
+    "@types/node": "^14.14.20",
     "google-pubsub-emulator": "^3.0.0",
-    "jest": "^24.1.0",
+    "jest": "^26.6.3",
     "standard-version": "^5.0.0",
-    "ts-jest": "^24.0.0",
-    "typescript": "^3.3.3"
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.1.3"
   },
   "dependencies": {
-    "@google-cloud/pubsub": "0.24.1",
-    "rxjs": "^6.4.0"
+    "@google-cloud/pubsub": "2.7.0",
+    "rxjs": "^6.6.3"
   }
 }
